kubernetes/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-deployment
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kafka-deployment
  template:
    metadata:
      labels:
        name: kafka-deployment
    spec:
      containers:
        - name: kafka-deployment
          image: bitnami/kafka:latest
          ports:
          - containerPort: 9092
---


apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-service
  name: kafka-service
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    app: kafka-deployment
status:
  loadBalancer: {}
