kubernetes/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - command: ['python', 'manage.py', 'runserver', '0.0.0.0:8000']
        # command: ['gunicorn', 'hms_api_gateway.wsgi:application', '--bind', '0.0.0.0:8000']
        name: api-gateway-web
        image: registry.digitalocean.com/heckerbella/api_gateway_web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: heckerbella

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: ClusterIP
  ports:
    - name: "http"
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: api-gateway
status:
  loadBalancer: {}
