kubernetes/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper-deployment
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zookeeper-deployment
  template:
    metadata:
      labels:
        name: zookeeper-deployment
    spec:
      containers:
        - name: zookeeper-deployment
          image: bitnami/zookeeper:latest
          # image: confluentinc/cp-zookeeper:latest
          ports:
          - containerPort: 2181
---


apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper-service
  name: zookeeper-service
spec:
  ports:
    - name: zookeeper
      port: 2181
      protocol: TCP
  selector:
    app: zookeeper-deployment
